--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <main style="margin-top: 10vh;">
                 <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
                     <div class="col position-relative">
-                        <img width="96" height="96" src="https://img.icons8.com/emoji/96/sweat-droplets.png" class="animate-bounce" alt="sweat-droplets" id="humidicon"/>
+                        <img width="96" height="96" src="https://img.icons8.com/emoji/96/sweat-droplets.png" class="animate-bounce iconsize" alt="sweat-droplets" id="humidicon"/>
                         <div class="card mb-4 rounded-3 shadow-md">
                             <div class="card-header py-3 text-bg-warning border-warning">
                                 <h4 class="my-0 fw-normal">Humidity</h4>
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="col position-relative">
-                        <img width="100" height="100" src="https://img.icons8.com/emoji/96/question-mark-emoji.png" class="animate-bounce" alt="question-mark-emoji" id="temperatureicon"/>
+                        <img width="100" height="100" src="https://img.icons8.com/emoji/96/question-mark-emoji.png" class="animate-bounce iconsize" alt="question-mark-emoji" id="temperatureicon"/>
                         <div class="card mb-4 rounded-3 shadow-sm border-warning">
                             <div class="card-header py-3 text-bg-warning border-warning">
                                 <h4 class="my-0 fw-normal">Temprature</h4>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="col position-relative">
-                        <img width="90" height="90" class="animate-bounce" src="https://img.icons8.com/fluency/96/wind.png" alt="wind" id="windicon"/>
+                        <img width="90" height="90" class="animate-bounce iconsize" src="https://img.icons8.com/fluency/96/wind.png" alt="wind" id="windicon"/>
             <!-- <img width="100" height="100" src="https://img.icons8.com/color/96/air-element.png"id="windicon" alt="air-element"/> -->
             <div class="card mb-4 rounded-3 shadow-sm" >
                             <div class="card-header py-3 text-bg-warning border-warning">
