--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
     <div class="container">
         <button id="offanim">Pause/Play</button>
         <div class="container py-3">
-            <!-- <img width="96" height="96" src="https://img.icons8.com/emoji/96/melting-face-emoji.png" alt="melting-face-emoji"/>
-            <img width="96" height="96" src="https://img.icons8.com/emoji/96/hot-face.png" alt="hot-face"/>
-            <img width="96" height="96" src="https://img.icons8.com/emoji/96/sneezing-face.png" alt="sneezing-face"/>
-            <img width="96" height="96" src="https://img.icons8.com/emoji/96/cold-face.png" alt="cold-face"/> -->
             <header>
                 
                 <div class="pricing-header mt-5 p-3 pb-md-4 mx-auto text-center">
                     <img style=" margin-top: -95px; margin:auto; display: block;" class="animate-bounce" id="weath"
-                        src="https://img.icons8.com/?size=100&id=zIVmoh4T8wh7&format=png" />
+                        src="https://img.icons8.com/?size=196&id=zIVmoh4T8wh7&format=png" width="100px" height="100px" />
                     <h1 class="display-3 fw-bold text-body-emphasis">
                         Weather
                     </h1>
